CMS7-8416: minor tree fixes  - added class to junction anchor  - added helper mixins for vertical/horizontal center alignment  - re-aligned tree items (junction/icon/label)  - Bulletlarge is a bit easier to resize it seems

--- a/cms/api/src/main/styling/less/_mixins.less
+++ b/cms/api/src/main/styling/less/_mixins.less
@@ -49,3 +49,15 @@
   // Safari/chrome
   -webkit-filter: grayscale(100%);
 }
+
+.help-align-horizontal-center() {
+  background: linear-gradient(to bottom, red 50%, yellow 50%);
+  // The rectangle in which to repeat. It can be fully wide in this case
+  background-size: 100% 100%;
+}
+
+.help-align-vertical-center() {
+  background: linear-gradient(to right, red 50%, yellow 50%);
+  // The rectangle in which to repeat. It can be fully wide in this case
+  background-size: 100% 100%;
+}
