--- a/cms/api/src/main/styling/less/_variables.less
+++ b/cms/api/src/main/styling/less/_variables.less
@@ -38,6 +38,7 @@
 @red-alert:                         #da1c5c;
 @perspective-icon:                  #cccdd0;
 @tab-hover:                         #d9dadb;
+@tree-junction-color:               #1C1C1C;
 
 // Tmp colors 
 @border-gray:                       #d7d9db;
